--- a/.dev/sass/style.scss
+++ b/.dev/sass/style.scss
@@ -1,9 +1,9 @@
 /**
- * Theme Name: Scribbles
- * Theme URI: https://wordpress.org/themes/scribbles/
+ * Theme Name: Escapade
+ * Theme URI: https://wordpress.org/themes/escapade/
  * Author: GoDaddy
  * Author URI: https://www.godaddy.com/
- * Description: Scribbles is a fun, playful child theme for the Primer Theme.
+ * Description: Escapade is a travel-oriented child theme for the Primer theme.
  * Version: 1.0.0
  * License: GPL-2.0
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
