initial commit, work in progress

--- a/.dev/sass/mixins/_global.scss
+++ b/.dev/sass/mixins/_global.scss
@@ -300,7 +300,7 @@ html, body { height: 100%; }
 }
 
 html,
-body { font-size: $base-font-size; }
+body { font-size: $base-font-size; height: 100%; }
 
 // Default body styles
 body {
