--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -1,42 +1,26 @@
 $entry-title-bg: rgba(0,0,0,.6) !default;
 
-.site-title-wrapper{
-	@extend .row;
-	margin-bottom: 40px;
-}
-
-.site-title-wrapper-inner{
-	@extend .large-12;
-	@extend .columns;
-}
-
 .site-title {
-	font-family: $sans-font-family;
-	font-size: emCalc(32);
-	font-size: rem-calc(32);
-	font-weight: normal;
-	color: contrast-color($menu-background-color, #fff, #000, 50%);
-	line-height: 1;
-	letter-spacing: -.03em;
-	font-weight: 700;
-	margin-bottom: .25em;
-
-	a{
-		color: $body-font-color;
-	}
 }
 
 .site-description{
-	font-size: emCalc(16);
-	font-size: rem-calc(16);
-	color: lighten($body-font-color,20%);
-	font-family: $sans-font-family;
 }
 
 .site-header {
-	padding: 40px 0 0;
-	background-color: $header-bg-color;
-	letter-spacing: -.01em;
+	background: blue;
+	height: 100%;
+	max-height: 868px;
+	.site-title {
+		background: map-get($foundation-palette, primary);
+		float: left;
+		padding: 0;
+		margin: 0;
+		height: 100%;
+		a {
+			display: block;
+			margin: 75px 30px 0;
+		}
+	}
 }
 
 .featured-content{
