remove inc folder, clean up functions file

--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -15,6 +15,7 @@ $menu-background-color: rgba(25,25,25,.8) !default;
 			color: #fff;
 			border: 0;
 			font-size: 16px;
+			margin-bottom: 0;
 		}
 		cite {
 			color: #999999;
