--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -13,6 +13,7 @@ body {
 .site-header {
 	height: 100%;
 	max-height: 868px;
+	min-height: 500px;
 	.site-title {
 		background: map-get($foundation-palette, primary);
 		float: left;
