--- a/.dev/sass/partials/_layout.scss
+++ b/.dev/sass/partials/_layout.scss
@@ -1,6 +1,5 @@
 #content{
-	@extend .row;
-	padding: 2.25rem 0;
+	padding: 2.25rem 0 2.25rem 19rem;
 
 	body.layout-one-column-full & {
 		max-width: 100%;
