fonts, add social to primary navigation, change faux column, increase padding on content area

--- a/.dev/sass/partials/_comments.scss
+++ b/.dev/sass/partials/_comments.scss
@@ -63,7 +63,7 @@
 
 		.comment-author,
 		.comment-metadata{
-			font-family: $sans-font-family;
+			font-family: $primary-font-family;
 		}
 
 		.comment-metadata {
@@ -118,7 +118,7 @@
 
 #respond {
 	margin-top: 10px;
-	font-family: $sans-font-family;
+	font-family: $primary-font-family;
 
 	h3#reply-title {
 		font-size: 1.5em !important;
