--- a/.dev/sass/partials/_featured-content.scss
+++ b/.dev/sass/partials/_featured-content.scss
@@ -45,7 +45,7 @@ $featured-content-bg: rgba(0,0,0,.6) !default;
 	.entry-title{
 		font-size: rem-calc(42);
 		line-height: 1.2;
-		font-family: $sans-font-family;
+		font-family: $primary-font-family;
 		font-weight: bold;
 	}
 
@@ -64,7 +64,7 @@ $featured-content-bg: rgba(0,0,0,.6) !default;
 		background-color: $primary-color;
 		color: contrast-color($primary-color, #fff, #000, 50%);
 		display: inline-block;
-		font-family: $sans-font-family;
+		font-family: $primary-font-family;
 		text-transform: uppercase;
 		font-weight: bold;
 		font-size: emCalc(13);
