--- a/.dev/sass/partials/_widgets.scss
+++ b/.dev/sass/partials/_widgets.scss
@@ -73,7 +73,7 @@ $widget-bg: #fff !default;
 }
 
 .widget-title {
-	font-family: $sans-font-family;
+	font-family: $primary-font-family;
 	position: relative;
 	box-sizing: content-box;
 	font-weight: bold;
