--- a/.dev/sass/partials/_footer.scss
+++ b/.dev/sass/partials/_footer.scss
@@ -90,11 +90,11 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 		.widget-title {
 			color: $site-footer-anchor-color;
 			background: transparent;
-			font-weight: bold;
+			font-weight: 300;
 			text-transform: uppercase;
 			font-size: 22px;
 			position: absolute;
-			left: -30px;
+			left: -45px;
 			transform: rotate(-90deg);
 			transform-origin: left top 0;
 			width: 1000px;
@@ -122,6 +122,7 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 	background: $site-footer-info-background;
 	color: $site-footer-info-text-color;
 	line-height: 1.5;
+	font-family: $primary-font-family;
 
 	a{
 		color: $site-footer-info-anchor-color;
@@ -134,7 +135,6 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 	.site-info-text{
 		float: left;
 		width: 50%;
-		margin-top: 5px;
 		color: #535353;
 		a[rel="designer"] {
 			color: #535353;
@@ -143,10 +143,11 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 	
 	.menu {
 		padding: 0;
-		margin: 0;
+		margin: 0 0 10px 0;
 		list-style: none;
 		li {
 			display: inline;
+			padding-right: 30px;
 			a {
 				text-transform: uppercase;
 			}
@@ -157,14 +158,26 @@ $site-footer-info-anchor-color-hover: contrast-color($site-footer-info-backgroun
 		overflow: hidden;
 
 		.social-menu {
-
+			float: right;
+			width: 50%;
 			ul{
 				margin-right: 0;
+				li:last-child a {
+					margin-right: 0;
+				}
+			}
+			
+			li {
+				padding: 0;
 			}
 
 			a{
+				margin-right: 15px;
 				&:before {
 					font-size: 36px;
+					padding: 0;
+					width: 36px;
+					height: 36px;
 				}
 			}
 		}
