--- a/.dev/sass/variables/_variables.scss
+++ b/.dev/sass/variables/_variables.scss
@@ -30,6 +30,7 @@ $primary-font-family: 'Oswald', sans-serif;
 $secondary-font-family: 'Droid Serif', serif;
 $global-weight-normal: normal;
 $global-radius: 0;
+$cta-background: #55b74e;
 
 // 2. Breakpoints
 // --------------
