--- a/.dev/sass/partials/_layout.scss
+++ b/.dev/sass/partials/_layout.scss
@@ -1,5 +1,7 @@
 #content{
-	padding: 2.25rem 0 2.25rem 22rem;
+	@media all and ( min-width: 900px ) {
+		padding: 2.25rem 0 2.25rem 22rem;		
+	}
 
 	body.layout-one-column-full & {
 		max-width: 100%;
