--- a/.dev/sass/partials/_social.scss
+++ b/.dev/sass/partials/_social.scss
@@ -1,19 +1,3 @@
-header .social-menu {
-	@extend .clearfix;
-	margin-top: 10px;
-	a{
-		color: #999;
-		text-transform: uppercase;
-		font-family: $primary-font-family;
-		font-size: 12px;
-		line-height: 15px;
-		&:before{
-			@extend .genericon;
-			margin-right: 7px;
-		}
-	}
-}
-
 .site-info .social-menu {
 	@extend .clearfix;
 
@@ -96,6 +80,26 @@ header .social-menu {
 			position: relative;
 			padding: 0;
 			margin: 3px;
+		}
+	}
+}
+
+header .social-menu {
+	@extend .clearfix;
+	margin-top: 10px;
+	li {
+		margin: 0;
+		padding-bottom: 7px;
+	}
+	a{
+		color: #999;
+		text-transform: uppercase;
+		font-family: $primary-font-family;
+		font-size: 12px;
+		line-height: 15px;
+		&:before{
+			@extend .genericon;
+			margin-right: 7px;
 		}
 	}
 }
