small responsive fixes

--- a/.dev/sass/partials/_menus.scss
+++ b/.dev/sass/partials/_menus.scss
@@ -216,6 +216,7 @@ header .main-navigation-container .menu {
 		margin-right: 0;
 		right: 0;
 		z-index: 3;
+		max-height: 600px;
 		.quote-section {
 			position: absolute;
 			bottom: 40px;
