--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -8,7 +8,7 @@ $entry-title-bg: rgba(0,0,0,.6) !default;
 
 .site-header {
 	height: 100%;
-	max-height: 500px;
+	max-height: 600px;
 	@include clearfix;
 	@media screen and (min-width: 900px) {
 		max-height: 868px;
@@ -21,6 +21,7 @@ $entry-title-bg: rgba(0,0,0,.6) !default;
 		margin: 0;
 		height: 100%;
 		position: relative;
+		z-index: 2;
 		@media screen and (min-width: 900px) {
 			background: map-get($foundation-palette, primary);
 			float: left;
